objects/nitro__Nitro_Challenge_Rule__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>nitro__achieved__c</fullName>
        <label>achieved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__challengeId__c</fullName>
        <label>challengeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__goal__c</fullName>
        <label>goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__operator__c</fullName>
        <label>operator</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__tagId__c</fullName>
        <label>tagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__timeRange__c</fullName>
        <label>time range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Nitro Challenge Rule</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro Challenge Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>